# AntiCheat

./: .clang-format  .gitignore  CMakeLists.txt  CheatConfigManager.cpp  CheatConfigManager.h  CheatMonitor.cpp  CheatMonitor.h  CheatMonitorBaselineManager.cpp  CheatMonitorEngine.h  CheatMonitorEnvironmentGuard.cpp  CheatMonitorImpl.h  CheatMonitorReporter.cpp  CheatMonitorScheduler.cpp  HardwareInfoCollector.cpp  HardwareInfoCollector.h  ISensor.h  Logger.cpp  Logger.h  README.md  ScanContext.cpp  SensorRuntimeContext.cpp  SensorRuntimeContext.h  WMIProcessMonitor.cpp  WMIProcessMonitor.h  anti_cheat.proto  vcpkg.json
.github/workflows/: enhanced-smoke-test.yml  smoke-test.yml  windows-smoke.yml
docs/: presentation_outline.md  test-matrix.md  windows-test-handoff.md
hde/: hde32.cpp  hde32.h  hdedefines.h  table32.h
include/: CheatMonitorImpl.h  ISensor.h  ScanContext.h  SensorRuntimeContext.h
scripts/: build.ps1  check-code-quality.ps1  check-code-quality.sh  generate_ppt_pdf.py  pre-commit-check.ps1  pre-commit-check.sh  quick-verify.ps1  quick-verify.sh
sensors/: AdvancedAntiDebugSensor.cpp  AdvancedAntiDebugSensor.h  DriverIntegritySensor.cpp  DriverIntegritySensor.h  ISensor.cpp  IatHookSensor.cpp  IatHookSensor.h  InlineHookSensor.cpp  InlineHookSensor.h  MemorySecuritySensor.cpp  MemorySecuritySensor.h  ModuleActivitySensor.cpp  ModuleActivitySensor.h  ModuleIntegritySensor.cpp  ModuleIntegritySensor.h  ProcessAndWindowMonitorSensor.cpp  ProcessAndWindowMonitorSensor.h  ProcessHandleSensor.cpp  ProcessHandleSensor.h  ProcessHollowingSensor.cpp  ProcessHollowingSensor.h  SystemCodeIntegritySensor.cpp  SystemCodeIntegritySensor.h  ThreadActivitySensor.cpp  ThreadActivitySensor.h  VTableHookSensor.cpp  VTableHookSensor.h  VehHookSensor.cpp  VehHookSensor.h
test/: CMakeLists.txt  main.cpp
test/benchmark/: SensorPerformanceTest.cpp
test/fuzz/: AntiCheatProtobufFuzz.cpp  SensorFuzzTest.cpp
test/unit/: AsanVerification.cpp  CheatConfigManagerTest.cpp  CheatMonitorBaselineManagerTest.cpp  ControlApiConcurrencyTest.cpp  CryptoUtilsTest.cpp  EngineOsGateTest.cpp  HdeDisasmTest.cpp  SensorAdvancedAntiDebugTest.cpp  SensorDriverIntegrityTest.cpp  SensorIatHookTest.cpp  SensorInlineHookTest.cpp  SensorMemorySecurityTest.cpp  SensorModuleActivityTest.cpp  SensorModuleIntegrityTest.cpp  SensorProcessAndWindowMonitorTest.cpp  SensorProcessHandleTest.cpp  SensorProcessHollowingTest.cpp  SensorSystemCodeIntegrityTest.cpp  SensorThreadActivityTest.cpp  SensorVTableHookTest.cpp  SensorVehHookTest.cpp  SystemUtilsHashTest.cpp  TargetedScanSchedulerTest.cpp  UtilsStringTest.cpp  WMIProcessMonitorMockTest.cpp
tools/: extract_module_hashes.cpp
utils/: CryptoUtils.cpp  CryptoUtils.h  ScannerUtils.h  Scanners.h  SystemUtils.cpp  SystemUtils.h  Utils.cpp  Utils.h
